; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_relation.c_logicalrep_typmap_gettypname.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_relation.c_logicalrep_typmap_gettypname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@FirstGenbkiObjectId = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"unrecognized %u\00", align 1
@LogicalRepTypMap = common dso_local global i32* null, align 8
@HASH_FIND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"%s.%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @logicalrep_typmap_gettypname(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @FirstGenbkiObjectId, align 8
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @get_typisdefined(i64 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %9
  %14 = load i64, i64* %3, align 8
  %15 = call i8* (i8*, i64, ...) @psprintf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %14)
  store i8* %15, i8** %2, align 8
  br label %49

16:                                               ; preds = %9
  %17 = load i64, i64* %3, align 8
  %18 = call i8* @format_type_be(i64 %17)
  store i8* %18, i8** %2, align 8
  br label %49

19:                                               ; preds = %1
  %20 = load i32*, i32** @LogicalRepTypMap, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i64, i64* %3, align 8
  %24 = call i8* (i8*, i64, ...) @psprintf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %23)
  store i8* %24, i8** %2, align 8
  br label %49

25:                                               ; preds = %19
  %26 = load i32*, i32** @LogicalRepTypMap, align 8
  %27 = bitcast i64* %3 to i8*
  %28 = load i32, i32* @HASH_FIND, align 4
  %29 = call %struct.TYPE_3__* @hash_search(i32* %26, i8* %27, i32 %28, i32* %5)
  store %struct.TYPE_3__* %29, %struct.TYPE_3__** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %35, label %32

32:                                               ; preds = %25
  %33 = load i64, i64* %3, align 8
  %34 = call i8* (i8*, i64, ...) @psprintf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %33)
  store i8* %34, i8** %2, align 8
  br label %49

35:                                               ; preds = %25
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @OidIsValid(i32 %38)
  %40 = call i32 @Assert(i32 %39)
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = sext i32 %43 to i64
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i8* (i8*, i64, ...) @psprintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i64 %44, i32 %47)
  store i8* %48, i8** %2, align 8
  br label %49

49:                                               ; preds = %35, %32, %22, %16, %13
  %50 = load i8*, i8** %2, align 8
  ret i8* %50
}

declare dso_local i32 @get_typisdefined(i64) #1

declare dso_local i8* @psprintf(i8*, i64, ...) #1

declare dso_local i8* @format_type_be(i64) #1

declare dso_local %struct.TYPE_3__* @hash_search(i32*, i8*, i32, i32*) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @OidIsValid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
